--- a/app/src/main/res/layout/activity_game_pizza.xml
+++ b/app/src/main/res/layout/activity_game_pizza.xml
@@ -22,7 +22,7 @@
         app:layout_constraintVertical_bias="0.664" />
 
     <ImageView
-        android:id="@+id/soal"
+        android:id="@+id/pizzasoal"
         android:layout_width="42dp"
         android:layout_height="40dp"
         android:scaleType="centerCrop"
@@ -95,7 +95,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/pizza3"
+        android:src="@drawable/pizzasoaldua"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.773"
